# SR-Library

./: CMakeLists.txt  README.md
SRLib/: CMakeLists.txt
SRLib/include/: JSONParser.h  Parser.h  SRLib.h
SRLib/src/: JSONParser.cpp  SRLib.cpp
test/: CMakeLists.txt  ParserTest.cpp
